# rustframe

./: .gitignore  Cargo.toml  FRONTEND_APP_RULES.md  LICENSE  README.md
.github/workflows/: package-verify.yml
apps/atlas-crm/: app.js  index.html  styles.css
apps/daybreak-notes/: app.js  index.html  styles.css
apps/dispatch-room/: app.js  index.html  styles.css
apps/ember-habits/: app.js  index.html  styles.css
apps/harbor-bookings/: app.js  index.html  styles.css
apps/hello-rustframe/: Cargo.toml  app.js  index.html  rustframe.json  rustframe.toml  styles.css
apps/ledger-grove/: app.js  index.html  styles.css
apps/meridian-inventory/: app.js  index.html  styles.css
apps/orbit-desk/: Cargo.toml  app.js  bridge.js  index.html  rustframe.toml  styles.css
apps/prism-gallery/: app.js  index.html  styles.css
apps/quill-studio/: app.js  index.html  styles.css
apps/research-desk/: app.js  index.html  rustframe.json  styles.css
crates/rustframe/: Cargo.toml
crates/rustframe-cli/: Cargo.toml
crates/rustframe-cli/src/: main.rs
crates/rustframe-cli/templates/: Cargo.toml.tmpl  rustframe.toml.tmpl
crates/rustframe-cli/templates/data/: schema.json
crates/rustframe-cli/templates/data/seeds/: 001-welcome.json
crates/rustframe-cli/templates/ejected-runner/: Cargo.toml.tmpl  main.rs.tmpl
crates/rustframe-cli/templates/frontend/: app.js  index.html  rustframe.json  styles.css
crates/rustframe-cli/templates/generated-runner/: Cargo.toml.tmpl  main.rs.tmpl
crates/rustframe-cli/tests/: workflow_smoke.rs
crates/rustframe/src/: bridge.js  capability.rs  database.rs  desktop.rs  error.rs  ipc.rs  lib.rs
crates/rustframe/tests/: database_workflow.rs
docs/: README.md  build-in-20-minutes.md  community-templates.md  example-apps.md  frontend-app-rules.md  getting-started.md  migrations-and-versioning.md  release-checklist.md  runtime-and-capabilities.md  signing-and-notarization.md
examples/capability-demo/: Cargo.toml
examples/community-templates/: README.md  catalog.json
examples/frontend-starters/: README.md
examples/github-actions/: README.md  release-bundles.yml  verify-packaging.yml
scripts/: capture_rustframe_screenshots.py  ci_package_verify.sh  sync_site_docs.sh
site/: app.js  docs.html  index.html  showcase.html  showcase.json  styles.css
site/docs/: README.md  architecture-overview.md  capability-extension-patterns.md  choosing-rustframe.md  cookbook.md  example-apps.md  frontend-app-rules.md  getting-started.md  platform-support.md  remote-sync-patterns.md  (+3 more)
(+59 files in other folders)
