[package]
name = "rustframe-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
flate2 = "1.1.5"
rustframe = { path = "../rustframe", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
