[package]
name = "rustframe"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dep:arboard", "dep:gtk", "dep:mime_guess", "dep:rfd", "dep:tao", "dep:wry"]

[dependencies]
arboard = { version = "3.6.1", optional = true }
base64 = "0.22.1"
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
thiserror = "2.0"
time = { version = "0.3.44", features = ["formatting"] }

[dependencies.mime_guess]
version = "2.0.5"
optional = true

[dependencies.rfd]
version = "0.15.4"
optional = true

[dependencies.tao]
version = "0.34.6"
optional = true

[dependencies.wry]
version = "0.54.3"
optional = true

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies.gtk]
version = "0.18"
optional = true

[dev-dependencies]
tempfile = "3.23.0"
